--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
         <title> More SCSS</title>
     </head>
     <body>
-        <div class="parent">
-            <h2 class="px-size">Hello</h2>
-
-            <h2 class="rem-size">Hello</h2>
-
-            <h2 class="em-size">Hello</h2>
-
+        <div class="parent parent-intro">
+            <div class=" child child-1">asdf</div>
+            <div class=" child child-2">zxcv</div>
+            <div class=" child child-3">;lkj</div>
         </div>
-
-
-
-
-
-        
+        <br/>
+        <div class=" parent parent-spacing">
+            <div class="child child-1">Testing</div>
+            <div class="child child-2">Testing</div>
+            <div class="child child-3">Testing</div>
+        </div>
+        <br/>
+        <div class="parent parent-flexconstants">
+            <div class="child child-1">Testing</div>
+            <div class="child child-2">Testing</div>
+        </div>
     </body>
 </html>
