--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
         <title> More SCSS</title>
     </head>
     <body>
-        <div class="parent parent-intro">
-            <div class=" child child-1">asdf</div>
-            <div class=" child child-2">zxcv</div>
-            <div class=" child child-3">;lkj</div>
-        </div>
-        <br/>
-        <div class=" parent parent-spacing">
-            <div class="child child-1">Testing</div>
-            <div class="child child-2">Testing</div>
-            <div class="child child-3">Testing</div>
-        </div>
-        <br/>
-        <div class="parent parent-flexconstants">
-            <div class="child child-1">Testing</div>
-            <div class="child child-2">Testing</div>
-        </div>
+        <header class="header">
+            <h1 class="header-title">Big Ballas</h1>
+        </header>
+        <section class="about">
+            <div class="about-col">
+                <img src="img/shaq.jpg" alt="Shaq" class="about-img1">
+                <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img1">
+                <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img1">
+            </div>
+            <div class="about-col">
+                <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img2">
+                <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img2">
+                <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img2">
+            </div>
+            <div class="about-col">
+                <img src="img/jamesharden.jpg" alt="James Harden" class="about-img3">
+                <img src="img/jordan.jpg" alt="Jordan" class="about-img3">
+                <img src="img/jokic.jpg" alt="Jokic" class="about-img3">
+            </div>
+        </section>
     </body>
 </html>
