--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF=8" />
         <meta http-equiv="X-UA-Compatable" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="scss/style.css"/>
         <title> More SCSS</title>
     </head>
     <body>
@@ -12,21 +12,24 @@
             <h1 class="header-title">Big Ballas</h1>
         </header>
         <section class="about">
-            <div class="about-col">
-                <img src="img/shaq.jpg" alt="Shaq" class="about-img1">
-                <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img1">
-                <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img1">
+            <div class=".about-row">
+                <div class="about-col">
+                    <img src="img/shaq.jpg" alt="Shaq" class="about-img1">
+                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img1">
+                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img1">
+                </div>
+                <div class="about-col">
+                    <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img2">
+                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img2">
+                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img2">
+                </div>
+                <div class="about-col">
+                    <img src="img/jamesharden.jpg" alt="James Harden" class="about-img3">
+                    <img src="img/jordan.jpg" alt="Jordan" class="about-img3">
+                    <img src="img/jokic.jpg" alt="Jokic" class="about-img3">
+                </div>
             </div>
-            <div class="about-col">
-                <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img2">
-                <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img2">
-                <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img2">
-            </div>
-            <div class="about-col">
-                <img src="img/jamesharden.jpg" alt="James Harden" class="about-img3">
-                <img src="img/jordan.jpg" alt="Jordan" class="about-img3">
-                <img src="img/jokic.jpg" alt="Jokic" class="about-img3">
-            </div>
+           
         </section>
     </body>
 </html>
