--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <section class="about">
             <div class=".about-row">
                 <div class="about-col">
-                    <img src="img/shaq.jpg" alt="Shaq" class="about-img1">
-                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img1">
-                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img1">
+                    <img src="img/shaq.jpg" alt="Shaq" class="about-img">
+                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img">
+                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img">
                 </div>
                 <div class="about-col">
-                    <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img2">
-                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img2">
-                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img2">
+                    <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img">
+                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img">
+                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img">
                 </div>
                 <div class="about-col">
-                    <img src="img/jamesharden.jpg" alt="James Harden" class="about-img3">
-                    <img src="img/jordan.jpg" alt="Jordan" class="about-img3">
-                    <img src="img/jokic.jpg" alt="Jokic" class="about-img3">
+                    <img src="img/jamesharden.jpg" alt="James Harden" class="about-img">
+                    <img src="img/jordan.jpg" alt="Jordan" class="about-img">
+                    <img src="img/jokic.jpg" alt="Jokic" class="about-img">
                 </div>
             </div>
            
