--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF=8" />
         <meta http-equiv="X-UA-Compatable" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="scss/style.css"/>
+        <link rel="stylesheet" href="scss/style.css"/>  
         <title> More SCSS</title>
     </head>
     <body>
@@ -12,7 +12,7 @@
             <h1 class="header-title">Big Ballas</h1>
         </header>
         <section class="about">
-            <div class=".about-row">
+            <div class="about-row">
                 <div class="about-col">
                     <img src="img/shaq.jpg" alt="Shaq" class="about-img">
                     <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img">
