--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     </head>
     <body>
         <header class="header">
-            <h1 class="header-title">Big Ballas</h1>
+            <h1 id="id" class="header-title">Big Ballas</h1>
         </header>
-        <section class="about">
-            <div class="about-row">
-                <div class="about-col">
-                    <img src="img/shaq.jpg" alt="Shaq" class="about-img">
-                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="about-img">
-                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="about-img">
+        <section class="parent">
+            <div class="row">
+                <div class="col">
+                    <img src="img/shaq.jpg" alt="Shaq" class="img">
+                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
+                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
                 </div>
-                <div class="about-col">
-                    <img src="img/lebronjames.jpg" alt="LeBron James" class="about-img">
-                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="about-img">
-                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="about-img">
+                <div class="col">
+                    <img src="img/lebronjames.jpg" alt="LeBron James" class="img">
+                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
+                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
                 </div>
-                <div class="about-col">
-                    <img src="img/jamesharden.jpg" alt="James Harden" class="about-img">
-                    <img src="img/jordan.jpg" alt="Jordan" class="about-img">
-                    <img src="img/jokic.jpg" alt="Jokic" class="about-img">
+                <div class="col">
+                    <img src="img/jamesharden.jpg" alt="James Harden" class="img">
+                    <img src="img/jordan.jpg" alt="Jordan" class="img">
+                    <img src="img/jokic.jpg" alt="Jokic" class="img">
                 </div>
             </div>
            
