--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatable" content="IE-edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="scss/style.css"/>  
-        <title> More SCSS</title>
+        <title>Big Ballas</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Antonio&family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
@@ -17,19 +17,55 @@
         <section class="parent">
             <div class="row">
                 <div class="col">
-                    <img src="img/shaq.jpg" alt="Shaq" class="img">
-                    <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
-                    <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
+                    <div class="box">
+                        <h3>Shaq</h3>
+                        <img src="img/shaq.jpg" alt="Shaq" class="img">
+                        <p>"lol im seein some funny videos"</p>
+                    </div>
+                    <div class="box">
+                        <h3> JR Smith</h3>
+                        <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
+                        <p> HENNY</p>
+                    </div>
+                    <div class="box">
+                        <h3>Rajon Rondo </h3>
+                        <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
+                        <p>"omg my favorite pg chris paul"</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <img src="img/lebronjames.jpg" alt="LeBron James" class="img">
-                    <img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
-                    <img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
+                    <div class="box">
+                        <h3>Lebron James</h3>
+                        <img src="img/lebronjames.jpg" alt="LeBron James" class="img">
+                        <p>"TACO TUESDAYYYY"</p>
+                    </div>
+                    <div class="box">
+                        <h3>Kevin Durant</h3>
+                        <img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
+                        <p>"I will drink ur bath water"</p>
+                    </div>
+                    <div class="box">
+                        <h3>Pokusevski</h3>
+                        <img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
+                        <p>"..."</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <img src="img/jamesharden.jpg" alt="James Harden" class="img">
-                    <img src="img/jordan.jpg" alt="Jordan" class="img">
-                    <img src="img/jokic.jpg" alt="Jokic" class="img">
+                    <div class="box">
+                        <h3>James Harden</h3>
+                        <img src="img/jamesharden.jpg" alt="James Harden" class="img">
+                        <p>"honey bun"</p>
+                    </div>
+                    <div class="box">
+                        <h3>Jordan</h3>
+                        <img src="img/jordan.jpg" alt="Jordan" class="img">
+                        <p>"Stop it. Get some help."</p>
+                    </div>
+                    <div class="box">
+                        <h3>Nikola Jokic</h3>
+                        <img src="img/jokic.jpg" alt="Jokic" class="img">
+                        <p>"blehhhh"</p>
+                    </div>
                 </div>
             </div>
            
