--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <header class="header">
             <h1 id="id" class="header-title">Big Ballas</h1>
         </header>
+        <section class="butt">
+            <form class="form" action="https://youtu.be/ThmQU7zs-Ho">
+                <button class="button">Lebron James</button>
+            </form>
+        </section>
         <section class="parent">
             <div class="row">
                 <div class="col">
@@ -25,7 +30,7 @@
                     <div class="box">
                         <h3> JR Smith</h3>
                         <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
-                        <p> HENNY</p>
+                        <p>"HENNY"</p>
                     </div>
                     <div class="box">
                         <h3>Rajon Rondo </h3>
