--- a/index.html
+++ b/index.html
@@ -17,54 +17,69 @@
         <section class="parent">
             <div class="row">
                 <div class="col">
-                    <div class="box">
+                    <div class="box boxA">
                         <h3>Shaq</h3>
                         <img src="img/shaq.jpg" alt="Shaq" class="img">
                         <p>"lol im seein some funny videos"</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxB">
                         <h3> JR Smith</h3>
                         <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
                         <p>"HENNY"</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxC">
                         <h3>Rajon Rondo </h3>
                         <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
                         <p>"omg my favorite pg chris paul"</p>
                     </div>
+                    <div class="box boxD">
+                        <h3>Westbrook</h3>
+                        <img src="img/westbrook.jpg" alt="Westbrook" class="img">
+                        <p>"trippin"</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <div class="box">
+                    <div class="box boxA">
                         <h3>Lebron James</h3>
                         <img src="img/lebronjames.jpg" alt="LeBron James" class="img">
                         <p>"TACO TUESDAYYYY"</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxB">
                         <h3>Kevin Durant</h3>
                         <img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
                         <p>"I will drink ur bath water"</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxC">
                         <h3>Pokusevski</h3>
                         <img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
                         <p>"..."</p>
                     </div>
+                    <div class="box boxD">
+                        <h3> Zion</h3>
+                        <img src="img/zion.jpg" alt="Zion Williamson" class="img">
+                        <p>"ZION SMASH"</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <div class="box">
+                    <div class="box boxA">
                         <h3>James Harden</h3>
                         <img src="img/jamesharden.jpg" alt="James Harden" class="img">
                         <p>"honey bun"</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxB">
                         <h3>Jordan</h3>
                         <img src="img/jordan.jpg" alt="Jordan" class="img">
                         <p>"Stop it. Get some help."</p>
                     </div>
-                    <div class="box">
+                    <div class="box boxC">
                         <h3>Nikola Jokic</h3>
                         <img src="img/jokic.jpg" alt="Jokic" class="img">
                         <p>"blehhhh"</p>
+                    </div>
+                    <div class="box boxD">
+                        <h3>Draymond Green</h3>
+                        <img src="img/draymond.jpg" alt="Draymond Green" class="img">
+                        <p>*roars</p>
                     </div>
                 </div>
             </div>
