--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
                 <div class="col">
                     <div class="box boxA">
                         <h3>Shaq</h3>
-                        <img src="img/shaq.jpg" alt="Shaq" class="img">
+                        <div class="hoverflash">
+                        <figure><img src="img/shaq.jpg" alt="Shaq" class="img">
+                        </figure>
+                        </div>
                         <p>"lol im seein some funny videos"</p>
                     </div>
                     <div class="box boxB">
                         <h3> JR Smith</h3>
-                        <img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
+                        <div class="hoversad">
+                        <figure><img src="img/jrsmith.jpg" alt="Henny Smtih" class="img">
+                        </figure>
+                        </div>
                         <p>"HENNY"</p>
                     </div>
                     <div class="box boxC">
@@ -41,12 +47,18 @@
                 <div class="col">
                     <div class="box boxA">
                         <h3>Lebron James</h3>
-                        <img src="img/lebronjames.jpg" alt="LeBron James" class="img">
+                        <div class="hoverflash">
+                        <figure><img src="img/lebronjames.jpg" alt="LeBron James" class="img">
+                        </figure>
+                        </div>
                         <p>"TACO TUESDAYYYY"</p>
                     </div>
                     <div class="box boxB">
                         <h3>Kevin Durant</h3>
-                        <img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
+                        <div class="hoversad">
+                        <figure><img src="img/kevindurant.jpg" alt="Kevin Durant" class="img">
+                        </figure>
+                        </div>
                         <p>"I will drink ur bath water"</p>
                     </div>
                     <div class="box boxC">
@@ -63,12 +75,18 @@
                 <div class="col">
                     <div class="box boxA">
                         <h3>James Harden</h3>
-                        <img src="img/jamesharden.jpg" alt="James Harden" class="img">
+                        <div class="hoverflash">
+                        <figure><img src="img/jamesharden.jpg" alt="James Harden" class="img">
+                        </figure>
+                        </div>
                         <p>"honey bun"</p>
                     </div>
                     <div class="box boxB">
                         <h3>Jordan</h3>
-                        <img src="img/jordan.jpg" alt="Jordan" class="img">
+                        <div class="hoversad">
+                        <figure><img src="img/jordan.jpg" alt="Jordan" class="img">
+                        </figure>
+                        </div>
                         <p>"Stop it. Get some help."</p>
                     </div>
                     <div class="box boxC">
