--- a/index.html
+++ b/index.html
@@ -35,12 +35,18 @@
                     </div>
                     <div class="box boxC">
                         <h3>Rajon Rondo </h3>
-                        <img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
+                        <div class="hoverwiggle"> 
+                        <figure><img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
+                        </figure>
+                        </div>
                         <p>"omg my favorite pg chris paul"</p>
                     </div>
                     <div class="box boxD">
                         <h3>Westbrook</h3>
-                        <img src="img/westbrook.jpg" alt="Westbrook" class="img">
+                        <div class="hovershake">
+                        <figure><img src="img/westbrook.jpg" alt="Westbrook" class="img">
+                        </figure>
+                        </div>
                         <p>"trippin"</p>
                     </div>
                 </div>
@@ -63,12 +69,18 @@
                     </div>
                     <div class="box boxC">
                         <h3>Pokusevski</h3>
-                        <img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
+                        <div class="hoverwiggle"> 
+                        <figure><img src="img/pokusevski.jpg" alt="Pokusevski" class="img">
+                        </figure>
+                        </div>
                         <p>"..."</p>
                     </div>
                     <div class="box boxD">
                         <h3> Zion</h3>
-                        <img src="img/zion.jpg" alt="Zion Williamson" class="img">
+                        <div class="hovershake">
+                        <figure><img src="img/zion.jpg" alt="Zion Williamson" class="img">
+                        </figure>
+                        </div>
                         <p>"ZION SMASH"</p>
                     </div>
                 </div>
@@ -91,12 +103,17 @@
                     </div>
                     <div class="box boxC">
                         <h3>Nikola Jokic</h3>
-                        <img src="img/jokic.jpg" alt="Jokic" class="img">
+                        <div class="hoverwiggle"> 
+                        <figure><img src="img/jokic.jpg" alt="Jokic" class="img">
+                        </figure>
+                        </div>
                         <p>"blehhhh"</p>
                     </div>
                     <div class="box boxD">
                         <h3>Draymond Green</h3>
-                        <img src="img/draymond.jpg" alt="Draymond Green" class="img">
+                        <div class="hovershake">
+                        <figure><img src="img/draymond.jpg" alt="Draymond Green" class="img">
+                        </div>
                         <p>*roars</p>
                     </div>
                 </div>
