--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
         <header class="header">
             <h1 id="id" class="header-title">Big Ballas</h1>
         </header>
+        <div class:basketballa>
+            <div class="basketball">
+                <div class="ball">
+                <div class="lines"></div>
+                </div>
+              <div class="shadow"></div>
+              </div>
+        </div>
+        <div class:basketballz>
+            <div class="basketballzz">
+                <div class="ballz">
+                <div class="linesz"></div>
+                </div>
+              <div class="shadowz"></div>
+              </div>
+        </div>
         <section class="parent">
             <div class="row">
                 <div class="col">
