--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <figure><img src="img/shaq.jpg" alt="Shaq" class="img">
                         </figure>
                         </div>
-                        <p>"lol im seein some funny videos"</p>
+                        <p>"shaq attack"</p>
                     </div>
                     <div class="box boxB">
                         <h3> JR Smith</h3>
@@ -55,7 +55,7 @@
                         <figure><img src="img/rajonrondo.jpg" alt="Rajon Rondo" class="img">
                         </figure>
                         </div>
-                        <p>"omg my favorite pg chris paul"</p>
+                        <p>"omg chris paul!"</p>
                     </div>
                     <div class="box boxD">
                         <h3>Westbrook</h3>
@@ -126,7 +126,7 @@
                         <p>"blehhhh"</p>
                     </div>
                     <div class="box boxD">
-                        <h3>Draymond Green</h3>
+                        <h3>Draymond</h3>
                         <div class="hovershake">
                         <figure><img src="img/draymond.jpg" alt="Draymond Green" class="img">
                         </div>
