--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <figure><img src="img/shaq.jpg" alt="Shaq" class="img">
                         </figure>
                         </div>
-                        <p>"shaq attack"</p>
+                        <p>"shaqfu"</p>
                     </div>
                     <div class="box boxB">
                         <h3> JR Smith</h3>
